--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,13 +1,10 @@
 .root {
   background: rgba(255, 255, 255, 0.1);
-  bottom: 0;
   height: 40px;
-  left: 0;
-  position: fixed;
-  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 .credit {
