Add Modal component and use for start game view

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,6 +14,10 @@
   --font-weight-semibold: 600;
   --font-weight-medium: 500;
   --font-weight-regular: 400;
+
+  --color-deep-daishin-yellow: #f2cc04;
+  --color-purple-emperor: #6832bc;
+  --color-candied-blueberry: #321766;
 }
 
 // Global styles, not scoped to any particular component.
