--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 .root {
   align-items: center;
   background: rgba(255, 255, 255, 0.1);
+  border-radius: 0px 0px 12px 12px;
   display: flex;
   height: 60px;
   justify-content: center;
