--- a/styles/global.scss
+++ b/styles/global.scss
@@ -18,6 +18,7 @@
   --color-deep-daishin-yellow: #f2cc04;
   --color-purple-emperor: #6832bc;
   --color-candied-blueberry: #321766;
+  --color-black: #000000;
 }
 
 // Global styles, not scoped to any particular component.
