--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,6 +19,7 @@
   --color-purple-emperor: #6832bc;
   --color-candied-blueberry: #321766;
   --color-black: #000000;
+  --color-white: #ffffff;
 }
 
 // Global styles, not scoped to any particular component.
