--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -15,8 +15,9 @@
     var(--color-purple-emperor) 0%,
     var(--color-candied-blueberry) 100%
   );
-  padding: 32px;
   border: 4px solid var(--color-deep-daishin-yellow);
   border-radius: 10px;
   box-shadow: inset 0px -2px 0px var(--color-purple-emperor);
+  max-width: 80vw;
+  padding: 32px;
 }
