--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,6 +20,7 @@
   --color-candied-blueberry: #321766;
   --color-black: #000000;
   --color-white: #ffffff;
+  --color-matt-purple: #9467de;
 }
 
 // Global styles, not scoped to any particular component.
