--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,12 +15,19 @@
   --font-weight-medium: 500;
   --font-weight-regular: 400;
 
+  // Names from https://icolorpalette.com/
   --color-deep-daishin-yellow: #f2cc04;
   --color-purple-emperor: #6832bc;
   --color-candied-blueberry: #321766;
-  --color-black: #000000;
-  --color-white: #ffffff;
   --color-matt-purple: #9467de;
+  --color-beer-garden: #4fa033;
+  --color-green-flash: #75c857;
+
+  --color-white: #ffffff;
+  --color-neutral-2: #dfe5e9;
+  --color-neutral-3: #788084;
+  --color-neutral-4: #576065;
+  --color-black: #000000;
 }
 
 // Global styles, not scoped to any particular component.
