--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -1,12 +1,13 @@
 .root {
-  display: flex;
   align-items: center;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
   bottom: 0;
+  display: flex;
+  justify-content: center;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: var(--z-index-modal);
 }
 
 .modal {
@@ -20,4 +21,8 @@
   box-shadow: inset 0px -2px 0px var(--color-purple-emperor);
   max-width: 80vw;
   padding: 32px;
+}
+
+.closed {
+  display: none;
 }
