--- a/styles/global.scss
+++ b/styles/global.scss
@@ -28,6 +28,8 @@
   --color-neutral-3: #788084;
   --color-neutral-4: #576065;
   --color-black: #000000;
+
+  --z-index-modal: 10;
 }
 
 // Global styles, not scoped to any particular component.
