Add PlayerBar component

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -22,6 +22,8 @@
   --color-matt-purple: #9467de;
   --color-beer-garden: #4fa033;
   --color-green-flash: #75c857;
+  --color-blueberry-glaze: #b960de;
+  --color-pheromone-purple: #7c2aba;
 
   --color-white: #ffffff;
   --color-neutral-2: #dfe5e9;
