--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -2,6 +2,7 @@
   background: var(--color-deep-daishin-yellow);
   border: 3px solid var(--color-black);
   border-radius: 8px;
-  padding: 8px 16px;
+  padding: 0px 16px;
   font-weight: var(--font-weight-black);
+  height: 42px;
 }
