Remove previous components

--- a/components/BoardRow/BoardRow.module.scss
+++ b/components/BoardRow/BoardRow.module.scss
@@ -11,7 +11,7 @@
   font-size: var(--font-size-huge);
   font-weight: var(--font-weight-medium);
   height: 100%;
-  justify-content: end;
+  justify-content: flex-end;
   left: -64px;
   position: absolute;
   width: 40px;
