Style the join page using a Modal

--- a/components/Divider/Divider.module.scss
+++ b/components/Divider/Divider.module.scss
@@ -2,6 +2,7 @@
   border-bottom: 1px solid var(--color-matt-purple);
   margin: 24px 0;
   position: relative;
+  width: 100%;
 
   &::before,
   &::after {
