--- a/styles/global.scss
+++ b/styles/global.scss
@@ -26,6 +26,7 @@
   --color-pheromone-purple: #7c2aba;
 
   --color-white: #ffffff;
+  --color-neutral-1: #f9f9f9;
   --color-neutral-2: #dfe5e9;
   --color-neutral-3: #788084;
   --color-neutral-4: #576065;
