Ensure modal does not cover header (so log out can still be clicked)

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -32,7 +32,8 @@
   --color-neutral-4: #576065;
   --color-black: #000000;
 
-  --z-index-modal: 10;
+  --z-index-header: 10;
+  --z-index-modal: 5;
 }
 
 // Global styles, not scoped to any particular component.
