Add a spacebar to the keyboard, fix header z-index

--- a/components/Keyboard/Keyboard.module.scss
+++ b/components/Keyboard/Keyboard.module.scss
@@ -24,6 +24,10 @@
   width: 64px;
 }
 
+.keySpacebar {
+  width: 488px;
+}
+
 .keyLetterNotFound {
   background: linear-gradient(
     var(--color-neutral-4) 0%,
