--- a/styles/global.scss
+++ b/styles/global.scss
@@ -32,7 +32,8 @@
   --color-neutral-4: #576065;
   --color-black: #000000;
 
-  --z-index-header: 10;
+  --z-index-header: 15;
+  --z-index-confetti: 10;
   --z-index-modal: 5;
 }
 
