--- a/styles/global.scss
+++ b/styles/global.scss
@@ -17,6 +17,7 @@
 
   // Names from https://icolorpalette.com/
   --color-deep-daishin-yellow: #f2cc04;
+  --color-chinese-gold: #c2ac04;
   --color-purple-emperor: #6832bc;
   --color-candied-blueberry: #321766;
   --color-matt-purple: #9467de;
