A few tweaks to instructions layout.

--- a/components/Instructions/Instructions.module.scss
+++ b/components/Instructions/Instructions.module.scss
@@ -9,9 +9,9 @@
   }
 
   p {
-    font-size: var(--font-size-regular);
+    font-size: var(--font-size-small);
     font-weight: var(--font-weight-medium);
-    line-height: 1.75;
+    line-height: 1.55;
     margin-bottom: 18px;
     text-align: center;
   }
