Lots of random fixes.
Game end modal.
User win/loss stats.
No log in button on splash.
Random display changes (highlight scores more readily)
Rewording toasts on wins etc.

--- a/components/PlayerBar/PlayerBar.module.scss
+++ b/components/PlayerBar/PlayerBar.module.scss
@@ -32,3 +32,32 @@
     right: -3px;
   }
 }
+
+.wins {
+  color: var(--color-neutral-2);
+}
+
+.losses {
+  color: var(--color-neutral-2);
+}
+
+.ties {
+  color: var(--color-neutral-2);
+}
+
+.scorebox {
+  margin: 0 12px;
+  font-size: var(--font-size-largest);
+  filter: drop-shadow(0 0 1.15rem var(--color-white));
+}
+
+.padbox {
+  margin: 0 8px;
+  height: 22px;
+  border-left: 1px solid;
+}
+
+.stats {
+  padding: 0 2px;
+  opacity: 80%;
+}
